fixed the complete job screen styles, disables credit card payment if the budget is too low

--- a/src/app/inbox/jobs/container/complete-job/complete-job.component.css
+++ b/src/app/inbox/jobs/container/complete-job/complete-job.component.css
@@ -4,7 +4,3 @@
   border-radius: 5px;
   margin-top: 10vh;
 }
-
-.mh-50v {
-    min-height: 50vh;
-}
