--- a/src/app/inbox/jobs/container/enter-escrow/enter-escrow.component.css
+++ b/src/app/inbox/jobs/container/enter-escrow/enter-escrow.component.css
@@ -1,70 +1,1 @@
-#bluesnap-hosted-iframe-ccn,
-#ccn,
-#cvv,
-#exp,
-#bluesnap-hosted-iframe-cvv,
-#bluesnap-hosted-iframe-exp,
- {
-  height: 24px !important;
-  max-height: 24px !important;
-  padding: 5px;
-}
 
-
-body {
-  height: auto !important;
-}
-
-.btn-payment-type {
-  margin: 5px;
-  padding: 15px;
-  min-width: 150px;
-  min-height: 150px;
-  border: none;
-  background-color: white;
-  border-radius: 5px;
-  font-weight: 400;
-  transition: all 0.5s;
-}
-
-.btn-payment-type:hover {
-  cursor: pointer;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.125);
-}
-
-.btn-payment-type img {
-  height: 50px;
-  margin-bottom: 15px;
-}
-
-.createWallet {
-  background-color: white;
-  padding: 25px;
-  border-radius: 5px;
-}
-
-.choose-payment {
-  min-height: 50vh;
-}
-
-.choose-payment h1,
-h2 {
-  margin-bottom: 25px;
-}
-
-.choose-payment .btn {
-  min-width: 150px;
-}
-
-.btn-175 {
-  width: 175px;
-}
-
-#savePassword {
-  padding: 15px;
-}
-.mnemonic-phrase { 
-  padding: 10px;
-  background-color: #ebebeb;
-  border-radius: 5px;
-}
